# gainforge

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_push.yml  mirroring.yaml
app/: Cargo.toml
app/jpeg-decoder/: Cargo.toml
app/jpeg-decoder/src/: decoder.rs  lib.rs  parser.rs
app/jpeg-decoder/src/worker/: mod.rs
app/src/: main.rs  parse.rs
assets/: hdr.avif
fuzz/: Cargo.toml
fuzz/default/: default.rs
src/: apply_gain_map.rs  err.rs  gain_image.rs  gamma.rs  iso_gain_map.rs  lib.rs  mappers.rs  mlaf.rs  rgb_tone_mapper.rs  spline.rs  tonemapper.rs  util.rs
src/avx/: each_rgb.rs  mod.rs  scale_rgb.rs
src/cms/: cicp.rs  gamut.rs  icc.rs  matrix.rs  mod.rs  profile.rs  transform.rs  trc.rs
src/neon/: each_rgb.rs  mod.rs  scale_rgb.rs  util.rs
