workspace = { members = ["app"], exclude = ["fuzz"] }

[package]
name = "gainforge"
version = "0.5.0"
edition = "2024"
description = "HDR tonemapping library"
readme = "README.md"
keywords = ["hdr", "tonemap", "image"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/gainforge"
categories = ["multimedia::images"]
homepage = "https://github.com/awxkee/gainforge"
repository = "https://github.com/awxkee/gainforge"
exclude = ["*.jpg", "assets/*", "*.png", "assets/bench.jpg", "assets/bench.png", "assets/hdr.avif"]
rust-version = "1.89.0"

[dependencies]
moxcms = "0.8.0"
num-traits = "0.2"
pxfm = "^0.1.1"
quick-xml = { version = "0.39.0", features = ["serde", "serde-types", "serialize"], optional = true }
serde = { version = "^1.0.219", features = ["derive"], optional = true }

[features]
default = ["neon", "avx"]
uhdr = ["dep:serde", "dep:quick-xml"]
neon = []
avx = []

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg docsrs" cargo +nightly doc --all-features --no-deps --open
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
