[package]
name = "jpeg-decoder"
version = "0.3.1"
edition = "2021"

rust-version = "1.61.0"

license = "MIT OR Apache-2.0"
description = "JPEG decoder"
authors = ["The image-rs Developers"]
readme = "README.md"

documentation = "https://docs.rs/jpeg-decoder"
repository = "https://github.com/image-rs/jpeg-decoder"
keywords = ["jpeg", "jpg", "decoder", "image"]
exclude = ["/tests/*", "!/tests/*.rs"]

[features]
default = []
platform_independent = []
# Opt-in, this depends on Rust nightly. Will be changed to a no-op feature when
# the Rust feature is stabilized which is expected to be 1.61.
nightly_aarch64_neon = []
